    - Added extractDS_path.dpatch to set an absolute path in migrate-3-4.px.
    - Using po-debconf to make translations of debconf templates possible.
  * Added NEWS.Debian with notes regarding the upgrade to collectd-4.
  * Updated init script to only start a single collectd process.
  * Added examples/MyPlugin.pm.
  * Added XS-Vcs-{Git,Browser} tags.

 -- Sebastian Harl <sh@tokkee.org>  Wed, 13 Jun 2007 11:11:22 +0100

collectd (3.11.2-1) experimental; urgency=low

  * New upstream release.
  * Removed sensors-ignorelist.dpatch - has been merged upstream.
  * Removed email-ignore-size-le-0.dpatch - has been merged upstream.
  * Added watch file.
  * examples/myplugin.c: Pass "-" instead of NULL to plugin_submit().

 -- Sebastian Harl <sh@tokkee.org>  Thu, 15 Feb 2007 09:19:15 +0000

collectd (3.11.0-1) experimental; urgency=low

  * New upstream release.
    New plugins:
    - DNS traffic (query types, response codes, opcodes and traffic): dns
    - E-Mail statistics (count, traffic, spam scores and checks): email
    - Motherboard monitor: mbmon
    - Multimeter statistics: multimeter (beta version)
  * Upload to experimental because of Etch freeze.
  * New binary package collectd-dns (linking against libpcap).
    - Added collectd-dns to suggested packages.
  * Do not split off packages introducing new recommendations or suggestions.
    - Merge collectd-hddtemp into collectd.
    - Add hddtemp and mbmon to suggested packages.
  * Added sensors-ignorelist.dpatch: Avoid assertion in ignorelist_match ()
    when sensors plugin is not configured.
  * Added email-ignore-size-le-0.dpatch: Ignore the size of an email if it is
    less than or equal to zero.

 -- Sebastian Harl <sh@tokkee.org>  Sun, 24 Dec 2006 14:09:39 +0000

collectd (3.10.4-1) unstable; urgency=low

  * New upstream release.
    - Fix an infinite loop in server mode if binding to a socket fails and
      close the socket descriptor (Closes: #404018).